Remove username from MONGO_URI in .env file

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=4001
 SECRET_KEY=HAPPY_NEW_YEAR
-MONGO_URI="mongodb+srv://aziazi22t_db_user:b2AbvgYpJkenK8rI@cluster0.kejnd9p.mongodb.net/?appName=Cluster0"
+MONGO_URI="mongodb+srv://:b2AbvgYpJkenK8rI@cluster0.kejnd9p.mongodb.net/?appName=Cluster0"
 pass=7MWOZQPNBHntQRsU
