--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=4001
 SECRET_KEY=HAPPY_NEW_YEAR
-MONGO_URI="mongodb+srv://:b2AbvgYpJkenK8rI@cluster0.kejnd9p.mongodb.net/?appName=Cluster0"
+MONGO_URI="mongodb+srv:/bobur/:b2AbvgYpJkenK8rI@cluster0.kejnd9p.mongodb.net/?appName=Cluster0"
 pass=7MWOZQPNBHntQRsU
+
+
+"IShlamasligi mumkin URL"
